--- a/lesson02/index_hw.html
+++ b/lesson02/index_hw.html
@@ -9,20 +9,48 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 </head>
+<style>
+.progress-bar-warpepr{
+    width: 300px;
+    height: 30px;
+    margin-bottom: 60px;
+    border: 1px dashed red
+}
+
+.pregress-bar-inner{
+    height: 30px;
+    width: 0%;
+    background-color: grey;
+    transition: .5s;
+}
+
+.item{
+    margin-bottom: 30px;
+}
+
+</style>
 <body>
 <div class="section">
 
     <!-- progress bar  -->
     <div class="progress-bar-warpepr">
-        <div class="pregress-bar-inner"></div>
+        <div class="pregress-bar-inner" :style="progressBarStatus"></div>
     </div>
 
-    <!-- main contect -->
+    <!-- main content -->
 
-    <label v-for="item in items">
-        {{item.title}}
-        <input type="text" v-model="item.value">
-    </label>
+    <div class="item"  v-for="(item , i) in items">
+        <label :key="item.title">
+            {{item.title}}:
+            status: {{ status[item.title] }}
+            <input type="text"
+                @input="item.value = $event.target.value"
+                :value="item.value"
+                @keyup="checkForErrors(item.title, i)"
+             >
+        </label>
+    </div>
+
 
 
 </div>
@@ -32,25 +60,60 @@
 
 let vue = new Vue({
     el: '.section',
+
     data: {
+        progressBarStatus: {
+        width: '0%'
+    },
+        status:{
+            Name: '',
+            Email: '',
+            Phone: '',
+        },
         items: [
     {
         title: 'Name',
         value: '',
-        pattern: 2,
+        pattern: 1,
     },
     {
-        title: 'email',
+        title: 'Email',
         value: '',
         pattern: 3,
     },
     {
-        title: 'phone',
+        title: 'Phone',
         value: '',
         pattern: 3,
     },
 ]
-    }
+    },
+    methods: {
+        checkForErrors(titleName, index) {
+            console.log('checkForErrors', titleName);
+            
+            if (this.items[index].value.length >= this.items[index].pattern) {
+                this.status[titleName] = 'success'
+            } else {
+                this.status[titleName] = 'failure'
+            }
+        }
+    },
+    computed: {
+
+    },
+    beforeUpdate(){
+        let progressPoints = 0;
+        for(var key in this.status){
+            if(this.status[key] == 'success'){
+                progressPoints++
+            }
+        }
+    if (progressPoints === 0 ) this.progressBarStatus.width = '0%'
+    if (progressPoints === 1 ) this.progressBarStatus.width = '33%'
+    if (progressPoints === 2 ) this.progressBarStatus.width = '66%'
+    if (progressPoints === 3 ) this.progressBarStatus.width = '100%'
+}
 })
 </script>
 
